<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GallerySpecific">

    <ImageView
        android:id="@+id/gallery_specific_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="90"
        android:scaleType="centerCrop"
        android:contentDescription="@string/StringValueForImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/gallery_specific_img_del"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/StringValueForImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/garden_info_del_garden_btn"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/gallery_specific_back"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/StringValueForImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/progress_prev" />

</androidx.constraintlayout.widget.ConstraintLayout>