<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlantsSelection">

    <ImageView
        android:id="@+id/plants_selection_smarty_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/StringValueForImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plants_selection_plants_grid"
        app:srcCompat="@drawable/garden_registration_smarty_char"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/plants_selection_smarty_says_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/StringValueForImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/plants_selection_plants_grid"
        app:srcCompat="@drawable/garden_registration_smarty_says_background"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/plants_selection_smarty_says_text"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/plantsSelectionSmartySays"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/plants_selection_smarty_says_bg"
        app:layout_constraintEnd_toEndOf="@+id/plants_selection_smarty_says_bg"
        app:layout_constraintStart_toStartOf="@+id/plants_selection_smarty_says_bg"
        app:layout_constraintTop_toTopOf="@+id/plants_selection_smarty_says_bg" />

    <ImageButton
        android:id="@+id/plants_selection_progress_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/StringValueForImageButton"
        android:minWidth="48dp"
        android:minHeight="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/plants_selection_progress_text"
        app:layout_constraintEnd_toEndOf="@+id/plants_selection_plants_grid"
        app:layout_constraintTop_toTopOf="@+id/plants_selection_progress_text"
        app:srcCompat="@drawable/progress_next"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/plants_selection_progress_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/StringValueForImageButton"
        android:minWidth="48dp"
        android:minHeight="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/plants_selection_progress_text"
        app:layout_constraintStart_toStartOf="@+id/plants_selection_plants_grid"
        app:layout_constraintTop_toTopOf="@+id/plants_selection_progress_text"
        app:srcCompat="@drawable/progress_prev" />

    <TextView
        android:id="@+id/plants_selection_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/plantsSelectionProgress"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/plants_selection_plants_grid"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_marginTop="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plants_selection_progress_text"
        app:useDefaultMargins="false">

        <FrameLayout
            android:id="@+id/plants_selection_tomato"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            app:layout_column="0"
            app:layout_row="0"
            tools:layout_editor_absoluteX="-54dp"
            tools:layout_editor_absoluteY="137dp">

            <TextView
                android:id="@+id/plants_selection_tomato_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/plantsSelectionTomato"
                android:textAlignment="center"
                android:textColor="#000000"
                app:drawableTopCompat="@drawable/plants_selection_tomato_img"
                tools:layout_conversion_absoluteHeight="100dp"
                tools:layout_conversion_absoluteWidth="100dp"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="93dp" />

            <CheckBox
                android:id="@+id/plants_selection_tomato_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:foreground="@drawable/plants_selection_checkbox"
                android:foregroundGravity="top|left"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/plants_selection_potato"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:layout_column="1"
            app:layout_row="0"
            tools:layout_editor_absoluteX="-45dp"
            tools:layout_editor_absoluteY="315dp">

            <TextView
                android:id="@+id/plants_selection_potato_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/plantsSelectionPotato"
                android:textAlignment="center"
                android:textColor="#000000"
                app:drawableTopCompat="@drawable/plants_selection_potato_img"
                tools:layout_conversion_absoluteHeight="100dp"
                tools:layout_conversion_absoluteWidth="100dp"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="93dp" />

            <CheckBox
                android:id="@+id/plants_selection_potato_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:foreground="@drawable/plants_selection_checkbox"
                android:foregroundGravity="top|left" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/plants_selection_lettuce"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            app:layout_column="2"
            app:layout_row="0"
            tools:layout_editor_absoluteX="-43dp"
            tools:layout_editor_absoluteY="282dp">

            <TextView
                android:id="@+id/plants_selection_lettuce_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/plantsSelectionLettuce"
                android:textAlignment="center"
                android:textColor="#000000"
                app:drawableTopCompat="@drawable/plants_selection_lettuce_img"
                tools:layout_conversion_absoluteHeight="100dp"
                tools:layout_conversion_absoluteWidth="100dp"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="93dp" />

            <CheckBox
                android:id="@+id/plants_selection_lettuce_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:foreground="@drawable/plants_selection_checkbox"
                android:foregroundGravity="top|left"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/plants_selection_cherry"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:layout_column="0"
            app:layout_row="1"
            tools:layout_editor_absoluteX="-54dp"
            tools:layout_editor_absoluteY="358dp">

            <TextView
                android:id="@+id/plants_selection_cherry_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/plantsSelectionCherry"
                android:textAlignment="center"
                android:textColor="#000000"
                app:drawableTopCompat="@drawable/plants_selection_cherry_img"
                tools:layout_conversion_absoluteHeight="100dp"
                tools:layout_conversion_absoluteWidth="100dp"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="93dp" />

            <CheckBox
                android:id="@+id/plants_selection_cherry_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:foreground="@drawable/plants_selection_checkbox"
                android:foregroundGravity="top|left"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/plants_selection_sunflower"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            tools:layout_editor_absoluteX="-47dp"
            tools:layout_editor_absoluteY="369dp">

            <TextView
                android:id="@+id/plants_selection_sunflower_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/plantsSelectionSunflower"
                android:textAlignment="center"
                android:textColor="#000000"
                app:drawableTopCompat="@drawable/plants_selection_sunflower_img"
                tools:layout_conversion_absoluteHeight="100dp"
                tools:layout_conversion_absoluteWidth="100dp"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="93dp" />

            <CheckBox
                android:id="@+id/plants_selection_sunflower_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:foreground="@drawable/plants_selection_checkbox"
                android:foregroundGravity="top|left"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </FrameLayout>
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>