<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GrowGuideline">

    <ImageButton
        android:id="@+id/grow_guideline_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/StringValueForImageButton"
        android:minWidth="48dp"
        android:minHeight="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progress_prev"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/grow_guideline_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/StringValueForImageButton"
        android:minWidth="48dp"
        android:minHeight="56dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/grow_guideline_speech_bubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/grow_guideline_speech_bubble"
        app:layout_constraintTop_toTopOf="@+id/grow_guideline_speech_bubble"
        app:layout_constraintVertical_bias="0.501"
        app:srcCompat="@drawable/progress_prev" />

    <ImageButton
        android:id="@+id/grow_guideline_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/StringValueForImageButton"
        android:minWidth="48dp"
        android:minHeight="56dp"
        android:rotation="0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/grow_guideline_speech_bubble"
        app:layout_constraintEnd_toStartOf="@+id/grow_guideline_speech_bubble"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grow_guideline_speech_bubble"
        app:layout_constraintVertical_bias="0.501"
        app:srcCompat="@drawable/progress_prev" />

    <ImageView
        android:id="@+id/grow_guideline_title_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/StringValueForImageView"
        app:layout_constraintStart_toStartOf="@+id/grow_guideline_back"
        app:layout_constraintTop_toBottomOf="@+id/grow_guideline_back"
        app:srcCompat="@drawable/grow_guideline_tomato_img" />

    <TextView
        android:id="@+id/grow_guideline_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/grow_guideline_title_img"
        app:layout_constraintTop_toBottomOf="@+id/grow_guideline_title_img" />

    <ImageView
        android:id="@+id/grow_guideline_speech_bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/StringValueForImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grow_guideline_title_text"
        app:srcCompat="@drawable/grow_guideline_tomato_speech_bubble_1" />
</androidx.constraintlayout.widget.ConstraintLayout>